Adding Models,Data,Migration

--- a/NZWalksApp/NZWalksApp/appsettings.json
+++ b/NZWalksApp/NZWalksApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+   "NZWalks": "Data Source=CLAP3280\\MSSQLSERVER1;Database=WalksDb;Integrated Security=True; Encrypt=True; TrustServerCertificate=True;User Instance=False"
+
+  }
 }
